tests/compiler/diagnostics-engine/parsing-errors/tests/missing-semicolon/expected.txt
Error: Missing semicolon.
 --> Main.jack:2:35
  |
2 |     field int x, missing_semicolon
  |                                   ^
